--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
       </section>
 
       <!-- PORTFOLIO SECTION =================================================-->
-      <section class="section portfolio-section hidden">
+      <section class="section portfolio-section">
         <div class="container portfolio-section-container">
           <h2 class="title portfolio-section-title">Our Portfolio</h2>
           <ul class="list portfolio-section-list">
