--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
     </main>
 
     <!-- PAGE FOOTER ============================================================ -->
-    <footer class="footer hidden">
+    <footer class="footer">
       <div class="container footer-container">
         <!-- ********* logo ******************************************** -->
         <div class="footer-desc-box">
