--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
       <div class="container footer-container">
         <!-- ********* logo ******************************************** -->
         <div class="footer-desc-box">
-          <a class="logo logo-footer" href="./index.html"
+          <a class="logo-footer" href="./index.html"
             >Web<span class="logo-part-footer">Studio </span>
           </a>
           <p class="text-footer">
