--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
     </footer>
 
     <!-- MODAL-WINDOW ========================================================== -->
-    <div class="backdrop is-open hidden">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
