--- a/index.html
+++ b/index.html
@@ -59,6 +59,101 @@
           </svg>
         </button>
       </div>
+
+      <!-- MOBILE MENU ========================================================-->
+      <div class="mob-menu is-open">
+        <div class="container mob-menu-container">
+          <button type="button" class="mob-menu-close-btn">
+            <svg class="mob-menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <nav class="mob-menu-nav">
+            <ul class="mob-menu-nav-list">
+              <li>
+                <a class="link mob-menu-nav-link current" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li>
+                <a class="link mob-menu-nav-link" href="">Portfolio</a>
+              </li>
+              <li><a class="link mob-menu-nav-link" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <div class="mob-menu-contacts-box">
+            <address class="mob-menu-address">
+              <ul class="list mob-menu-address-list">
+                <li>
+                  <a
+                    class="link mob-menu-address-link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="link mob-menu-address-link current"
+                    href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="team-social-list">
+              <li class="team-social-item">
+                <a
+                  class="link team-social-link"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  rel="nofollow noreferrer noopener"
+                >
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-social-item">
+                <a
+                  class="link team-social-link"
+                  href="https://twitter.com"
+                  target="_blank"
+                  rel="nofollow noreferrer noopener"
+                >
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-social-item">
+                <a
+                  class="link team-social-link"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  rel="nofollow noreferrer noopener"
+                >
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-social-item">
+                <a
+                  class="link team-social-link"
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  rel="nofollow noreferrer noopener"
+                >
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
     <!-- MAIN-PAGE-CONTENT ===================================================-->
     <main>
@@ -414,7 +509,7 @@
       </section>
 
       <!-- PORTFOLIO SECTION =================================================-->
-      <!-- <source media="(min-width: )" srcset="" type="image/jpg"> -->
+
       <section class="section portfolio-section">
         <div class="container portfolio-section-container">
           <h2 class="title portfolio-section-title">Our Portfolio</h2>
@@ -811,7 +906,7 @@
     </footer>
 
     <!-- MODAL-WINDOW ========================================================== -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
