--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <!-- MOBILE MENU ========================================================-->
-      <div class="mob-menu is-open">
+      <div class="mob-menu">
         <div class="container mob-menu-container">
           <button type="button" class="mob-menu-close-btn">
             <svg class="mob-menu-close-icon" width="8" height="8">
@@ -991,6 +991,7 @@
               value="true"
               required
             />
+
             <label class="modal-form-checkbox-label" for="user-privacy"
               ><span class="modal-form-checkbox-customize">
                 <svg
@@ -1001,8 +1002,10 @@
                   <use href="./images/icons.svg#icon-vi"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="privacy-p-link">Privacy Policy</a>
+              <span class="modal-form-checkbox-privacy-text">
+                I accept the terms and conditions of the
+                <a href="" class="privacy-p-link">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <!--  Button Submit  -->
