--- a/index.html
+++ b/index.html
@@ -101,51 +101,53 @@
                 </li>
               </ul>
             </address>
-            <ul class="team-social-list">
-              <li class="team-social-item">
+
+            <!-- mob-social-list -->
+            <ul class="mob-social-list">
+              <li class="mob-social-item">
                 <a
-                  class="link team-social-link"
+                  class="link mob-social-link"
                   href="https://www.instagram.com/"
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                 >
-                  <svg class="team-social-icon" width="16" height="16">
+                  <svg class="mob-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team-social-item">
+              <li class="mob-social-item">
                 <a
-                  class="link team-social-link"
+                  class="link mob-social-link"
                   href="https://twitter.com"
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                 >
-                  <svg class="team-social-icon" width="16" height="16">
+                  <svg class="mob-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team-social-item">
+              <li class="mob-social-item">
                 <a
-                  class="link team-social-link"
+                  class="link mob-social-link"
                   href="https://www.facebook.com/"
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                 >
-                  <svg class="team-social-icon" width="16" height="16">
+                  <svg class="mob-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team-social-item">
+              <li class="mob-social-item">
                 <a
-                  class="link team-social-link"
+                  class="link mob-social-link"
                   href="https://www.linkedin.com/"
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                 >
-                  <svg class="team-social-icon" width="16" height="16">
+                  <svg class="mob-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
